# nes-emulator

./: CMakeLists.txt  README.md  TODO.md  main
include/: bus.h  cpu.h
src/: bus.cpp  cpu.cpp  main.cpp
